--- a/backend/backend/requirements.txt
+++ b/backend/backend/requirements.txt
@@ -8,5 +8,9 @@ psycopg2-binary==2.9.9
 psycopg2
 django-environ==0.11.2
 drf-spectacular==0.27.2
+pytest==8.2.2
+pytest-cov==5.0.0
+pytest-django==4.8.0
+pytest-factoryboy==2.7.0
 Pillow
 django-extensions
