--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-jss": "^10.10.0",
     "react-router-dom": "^7.2.0",
     "src": "^1.0.0",
