--- a/backend/backend/requirements.txt
+++ b/backend/backend/requirements.txt
@@ -13,5 +13,8 @@ pytest==8.2.2
 pytest-cov==5.0.0
 pytest-django==4.8.0
 pytest-factoryboy==2.7.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+celery==5.4.0
 Pillow
 django-extensions
