--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^8.0.0",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
